# aidial-integration-langchain

./: .gitignore  Makefile  README.md  noxfile.py  pyproject.toml
aidial_integration_langchain/: patch.py
aidial_integration_langchain/langchain_openai/chat_models/: azure.py  base.py
aidial_integration_langchain/patch/: __init__.py  decorators.py
example/: app.py  requirements.txt
tests/: client.py  test_case.py  test_cases.py  test_extra.py  test_langchain_custom_class.py  test_langchain_monkey_patch.py  test_langchain_noop.py  test_openai.py  test_patch.py  utils.py
tests/utils/: json.py
