[tool.poetry]
name = "aidial-integration-langchain"
version = "0.1.0"
description = "Utilities for integration of AI DIAL API with Langchain library"
authors = ["EPAM RAIL <SpecialEPM-DIALDevTeam@epam.com>"]
homepage = "https://epam-rail.com"
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
langchain = "0.3.0"
langchain-core = "0.3.1"
langchain-openai = "0.2.0"
openai = "1.46.0"
httpx = "0.27.2"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"
nox = "^2023.4.22"

[tool.poetry.group.lint.dependencies]
flake8 = "^6.0.0"
black = ">=23.3,<25.0"
isort = "^5.12.0"
pyright = "^1.1.324"
autoflake = "^2.2.0"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]

[tool.pyright]
typeCheckingMode = "basic"
reportUnusedVariable = "error"
reportIncompatibleMethodOverride = "error"
exclude = [
    ".git",
    "**/.venv",
    ".nox",
    ".pytest_cache",
    "**/__pycache__",
    "build"
]

[tool.black]
line-length = 80
exclude = '''
/(
    \.git
  | \.venv
  | \.nox
  | \.pytest_cache
  | \.__pycache__
)/
'''

[tool.isort]
line_length = 80
profile = "black"

[tool.autoflake]
ignore_init_module_imports = true
remove_all_unused_imports = true
in_place = true
recursive = true
quiet = true
exclude = [
    ".nox",
    ".pytest_cache",
    "\\.venv"
]
